# token-bubble

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: GITHUB-RELEASE-CHECKLIST.md  PROJECT-SUMMARY.md  RELEASE.md  RELEASE_TEMPLATE.md  TEST-MATRIX.md  USER-FEEDBACK-TRACKER.md
scripts/: build-feedback-trackers-split.mjs  macos-smoke-capture.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/codexscope/: START-HERE.txt
src-tauri/resources/codexscope/CodexScope Files/: LICENSE
src-tauri/resources/codexscope/CodexScope Files/app/: app.js  data.sample.js  index.html  styles.css
src-tauri/src/: codex.rs  lib.rs  local_usage.rs  models.rs
src/components/: CloudMistGauge.tsx  DesignPlayground.tsx  LiquidGauge.tsx  QuotaCard.tsx  TrayPanel.tsx
src/lib/: appUpdate.ts  bridge.ts  currency.test.ts  currency.ts  dailyUsage.test.ts  dailyUsage.ts  i18n.ts  liquidPhysics.test.ts  liquidPhysics.ts  skin.test.ts  skin.ts  usageHistory.test.ts  usageHistory.ts  usageRange.test.ts  usageRange.ts
