[package]
name = "token-bubble"
version = "0.1.5"
description = "Token Bubble Codex quota and usage monitor"
authors = ["Token Bubble contributors"]
license = "MIT"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "quota_float_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
